--- a/Buffout4.vcxproj
+++ b/Buffout4.vcxproj
@@ -225,6 +225,7 @@ copy "$(ProjectDir)$(TargetName).toml" "$(Fallout4Path)\Data\F4SE\Plugins\$(Targ
   <ItemGroup>
     <ClCompile Include="src\CrashHandler.cpp" />
     <ClCompile Include="src\Fixes\Fixes.cpp" />
+    <ClCompile Include="src\Fixes\SmallBlockAllocatorFix.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\PCH.cpp">
       <MultiProcessorCompilation Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</MultiProcessorCompilation>
@@ -241,7 +242,9 @@ copy "$(ProjectDir)$(TargetName).toml" "$(Fallout4Path)\Data\F4SE\Plugins\$(Targ
     <ClInclude Include="src\CrashHandler.h" />
     <ClInclude Include="src\Fixes\EncounterZoneResetFix.h" />
     <ClInclude Include="src\Fixes\Fixes.h" />
+    <ClInclude Include="src\Fixes\SafeExit.h" />
     <ClInclude Include="src\Fixes\ScaleformAllocatorFix.h" />
+    <ClInclude Include="src\Fixes\SmallBlockAllocatorFix.h" />
     <ClInclude Include="src\PCH.h" />
     <ClInclude Include="src\Settings.h" />
     <ClInclude Include="src\version.h" />
