--- a/Buffout4.vcxproj.filters
+++ b/Buffout4.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClCompile Include="src\Fixes\Fixes.cpp">
       <Filter>src\Fixes</Filter>
     </ClCompile>
+    <ClCompile Include="src\Fixes\SmallBlockAllocatorFix.cpp">
+      <Filter>src\Fixes</Filter>
+    </ClCompile>
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -32,7 +35,13 @@
     <ClInclude Include="src\Fixes\Fixes.h">
       <Filter>src\Fixes</Filter>
     </ClInclude>
+    <ClInclude Include="src\Fixes\SafeExit.h">
+      <Filter>src\Fixes</Filter>
+    </ClInclude>
     <ClInclude Include="src\Fixes\ScaleformAllocatorFix.h">
+      <Filter>src\Fixes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Fixes\SmallBlockAllocatorFix.h">
       <Filter>src\Fixes</Filter>
     </ClInclude>
     <ClInclude Include="src\PCH.h">
