--- a/Buffout4.toml
+++ b/Buffout4.toml
@@ -1,5 +1,6 @@
 [Fixes]
 EncounterZoneReset = true	# Fixes encounter zones resetting immediately once you leave them on foot
+FaderMenu = true	# Fixes a bug where the fader menu may not fully close
 SafeExit = true	# Fixes crashes related to exiting the game that can be caused erroneously by F4SE plugin hooks
 ScaleformAllocator = true	# Fixes crashes related to overloading the flash vm/scaleform
 SmallBlockAllocator = true	# Fixes crashes related to the small block allocator
